# zeropool-substrate

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.full.yml
docker/: startup.sh
js/: .dockerignore  README.md  index.js  init.js  lock.js  package-lock.json  package.json  release.js
node/src/: chain_spec.rs  cli.rs  command.rs  rpc.rs  service.rs
pallets/pallet-zeropool/: Cargo.toml  README.md
pallets/pallet-zeropool-simple-op-manager/: Cargo.toml
pallets/pallet-zeropool-simple-op-manager/src/: lib.rs  mock.rs
pallets/pallet-zeropool/src/: alt_bn128.rs  benchmarking.rs  lib.rs  maybestd.rs  mock.rs  num.rs  operator.rs  tests.rs  tx_decoder.rs  verifier.rs
pallets/zeropool-pallet/: Cargo.toml
pallets/zeropool-pallet/src/: alt_bn128.rs  benchmarking.rs  error.rs  lib.rs  mock.rs  num.rs  tests.rs  tx_decoder.rs  verifier.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: bench  publish-docker
tools/vk-converter/: Cargo.toml
tools/vk-converter/src/: main.rs
