[package]
name = 'pallet-zeropool'
version = '4.0.0-dev'
description = 'Implementation of ZeroPool substrate pallet'
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
homepage = 'https://substrate.io/'
edition = '2021'
license = 'Unlicense'
publish = false
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
borsh = { version = '0.9.1', default-features = false }
ff-uint =  { version = '0.2.4', git = "https://github.com/voidxnull/fawkes-crypto", branch = "update-scale-codec", default-features = false, features = ['borsh_support', 'scale_support'] }
num-traits = { version = "0.2.14", default-features = false }
num-derive = "0.3.3"
lazy_static = "1.4.0"
log = "0.4.14"
hex-literal = "0.3.4"
bn = { package = "zeropool-bn", version = "0.5.11", default-features = false, features = ["borsh"] }

codec = { package = "parity-scale-codec", version = "3.1.2", default-features = false, features = [
    "derive",
    "max-encoded-len",
] }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
frame-support = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18"}
frame-system = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
frame-benchmarking = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18", optional = true }

sp-core = { default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
sp-io = { default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
sp-runtime = { default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }

pallet-balances = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }

[features]
default = ['std', 'borsh_support']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'codec/std',
    'scale-info/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'borsh/std',
    'ff-uint/std',
    'num-traits/std',
    'sp-core/std',
    'sp-runtime/std',
]
try-runtime = ['frame-support/try-runtime']
borsh_support = ['ff-uint/borsh_support']
scale_support = ['ff-uint/scale_support']
